change the delimiter for the browser bookmark functions

--- a/emacs.org
+++ b/emacs.org
@@ -4896,7 +4896,7 @@ Inspired and borrowed from [[https://xenodium.com/building-your-own-bookmark-lau
                  (content (org-element-contents link))
                  (title (substring-no-properties (or (seq-first content) raw-link))))
             (when (string-prefix-p "http" raw-link)
-              (push (concat title " " (propertize raw-link 'face 'whitespace-space) "\n")
+              (push (concat title "\n" (propertize raw-link 'face 'whitespace-space) "\n")
                     links))))
         nil nil 'link)
       (seq-sort 'string-greaterp links))))
@@ -4907,7 +4907,7 @@ Inspired and borrowed from [[https://xenodium.com/building-your-own-bookmark-lau
   (browse-url
    (seq-elt
     (split-string
-     (completing-read "Open: " (my-org-web-bookmarks (expand-file-name "notebook.org" org-directory))) " ") 1)))
+     (completing-read "Open: " (my-org-web-bookmarks (expand-file-name "notebook.org" org-directory))) "\n") 1)))
 #+end_src
 ** with-editor
 Try to make it easier to use =emacsclient= as the =$EDITOR= of child processes using [[https://github.com/magit/with-editor][with-editor]].
