update where hl-line-mode and display-line-numbers are used

--- a/emacs.org
+++ b/emacs.org
@@ -1769,7 +1769,8 @@ Display line numbers any time in a programming-related buffer.
 
 ;; display-line-numbers-mode
 (when (fboundp 'display-line-numbers-mode)
-  (add-hook 'prog-mode-hook 'display-line-numbers-mode)
+  (let ((linum-hooks '(csv-mode-hook prog-mode-hook yaml-mode-hook yaml-ts-mode-hook)))
+    (mapc (lambda (hook) (add-hook hook 'display-line-numbers-mode)) linum-hooks))
   (setopt display-line-numbers-width 3))
 #+end_src
 
@@ -1777,7 +1778,7 @@ Display line numbers any time in a programming-related buffer.
 #+begin_src emacs-lisp :tangle lisp/init-editing.el
 
 ;; hl-line-mode
-(let ((hl-line-hooks '(csv-mode-hook dired-mode-hook prog-mode-hook)))
+(let ((hl-line-hooks '(csv-mode-hook dired-mode-hook prog-mode-hook yaml-mode-hook yaml-ts-mode-hook)))
   (mapc (lambda (hook) (add-hook hook 'hl-line-mode)) hl-line-hooks))
 #+end_src
 ** Highlight indentation
