comment out markdown-ts-mode for now ... maybe not yet ready

--- a/emacs.org
+++ b/emacs.org
@@ -1919,7 +1919,7 @@ allows you to jump between changes and revert them.
   (setq major-mode-remap-alist
         '((bash-mode . bash-ts-mode)
           (json-mode . json-ts-mode)
-          (markdown-mode . markdown-ts-mode)
+          ;; (markdown-mode . markdown-ts-mode)
           (python-mode . python-ts-mode)
           (yaml-mode . yaml-ts-mode)))
   :hook
