use executable-find for path to gpg
... do not hard code path

--- a/emacs.org
+++ b/emacs.org
@@ -2968,6 +2968,7 @@ The following is then the configuration that integrates Emacs with Notmuch.
   (notmuch-search-oldest-first nil)
   (notmuch-hello-thousands-separator ",")
   (notmuch-crypto-process-mime t)
+  (notmuch-crypto-gpg-program (executable-find "gpg"))
   (notmuch-show-part-button-default-action 'notmuch-show-view-part)
 
   :preface
@@ -3960,8 +3961,8 @@ passwords to the clipboard.
 
 
 (when (forge/system-type-darwin-p)
-  (custom-set-variables '(epg-gpg-program "/usr/local/bin/gpg"))
-  (setq epa-pinentry-mode 'loopback))
+  (setopt epg-gpg-program (executable-find "gpg"))
+  (setopt epa-pinentry-mode 'loopback))
 
 (use-package auth-source)
 
