--- a/emacs.org
+++ b/emacs.org
@@ -1297,7 +1297,12 @@ completion popup.
   :custom
   (corfu-separator ?\s)
   :init
-  (global-corfu-mode))
+  (global-corfu-mode)
+  :bind
+  (:map corfu-map
+        ("SPC" . corfu-insert-separator)
+        ("C-n" . corfu-next)
+        ("C-p" . corfu-previous)))
 
 (use-package corfu-popupinfo
   :ensure nil
@@ -3113,6 +3118,7 @@ Will open a notmuch search buffer of the search results."
   :config
   (add-hook 'notmuch-show-hook '(lambda () (setq show-trailing-whitespace nil)))
   (setq notmuch-archive-tags '("-unread" "-inbox" "-trash" "-bulk" "-spam")
+        notmuch-address-save-filename "~/annex/var/notmuch/contacts"
         notmuch-saved-searches '(( :name "📥 Inbox"
                                    :key "i"
                                    :query "tag:inbox")
