enable org-list-allow-alphabetical

--- a/emacs.org
+++ b/emacs.org
@@ -3580,6 +3580,7 @@ Miscellaneous notes:
   (org-export-backends '(ascii html icalendar latex md))
   (org-export-coding-system 'utf-8)
   (org-html-checkbox-type 'html)
+  (org-list-allow-alphabetical t)
   (org-log-done t)
   (org-log-reschedule "note")
   (org-log-into-drawer t)
