--- a/emacs.org
+++ b/emacs.org
@@ -2204,6 +2204,7 @@ documents.
   :ensure nil
   :init (init-vc-install :fetcher "github" :repo "sfromm/fle-mode")
   :commands (fle-mode)
+  :magic ("mycall " . fle-mode)
   :config
   (setq-local tab-width 8))
 #+end_src
