update variable name after previous was obsoleted

--- a/emacs.org
+++ b/emacs.org
@@ -3978,7 +3978,7 @@ passwords to the clipboard.
 
 (when (forge/system-type-darwin-p)
   (setopt epg-gpg-program (executable-find "gpg"))
-  (setopt epa-pinentry-mode 'loopback))
+  (setopt epg-pinentry-mode 'loopback))
 
 (use-package auth-source)
 
